fix breadcrumbs/series tag on mobile

--- a/cheetah-responsive.scss
+++ b/cheetah-responsive.scss
@@ -159,6 +159,7 @@ body.ngm {
 						margin: 3.5rem auto;
 						text-align: center;
 						width: $max-text-width;
+						max-width: 80%;
 						
 						span.published {
 							
